Fix Safari overlay overflow

--- a/projects/anglify/src/modules/overlay/index.scss
+++ b/projects/anglify/src/modules/overlay/index.scss
@@ -9,6 +9,10 @@
     inset: 0;
     pointer-events: none;
     background: transparent;
+    border-radius: inherit;
+    overflow: hidden;
+    z-index: 0;
+    contain: strict;
   }
 
   .anglify-overlay__selected {
